<resources>
    <string name="app_name">Time Shift</string>
    <string name="welcome">Welcome to\nTime Shift</string>
    <string name="action_start">Start</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_about">About Us</string>
    <string name="action_settings">Settings</string>
    <string name="action_end">End</string>
    <string name="action_edit_done">Done</string>
    <string name="event_type">Event Type</string>
    <string name="description">Description</string>
    <string name="planned_start">Planned Start Time</string>
    <string name="planned_end">Planned End Time</string>
    <string name="event_planned">%1$s - %2$s</string>
    <string name="event_actual">%1$s - %2$s</string>
    <string name="set_planned_start_time">Set Planned Start Time</string>
    <string name="set_planned_end_time">Set Planned End Time</string>
    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="done">Done</string>
    <string name="about_content">You can type every word you want in about content</string>
    <string name="planned">Planned: </string>
    <string name="actual">Actual: </string>
    <string name="empty" />
    <string name="channel_name">Time-shift Channel</string>
    <string name="snooze">Snooze</string>
    <string name="action">Action</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder_summary">Prevent from missing any deadline.</string>
    <string name="reminder_dialog_title">Remind Me</string>
    <string name="reminder_default_value">5</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">Support different themes.</string>
    <string name="theme_dialog_title">Select Theme</string>
    <string name="theme_default_value">theme_1</string>

    <string-array name="reminder_entries">
        <item>5 minutes before</item>
        <item>1 minute before</item>
        <item>At scheduled finish time</item>
        <item>Never</item>
    </string-array>

    <string-array name="reminder_entry_values">
        <item>5</item>
        <item>1</item>
        <item>0</item>
        <item>None</item>
    </string-array>

    <string-array name="theme_entries">
        <item>Day</item>
        <item>Night</item>
        <item>Fresh</item>
        <item>Sky</item>
        <item>Warm</item>
    </string-array>

    <string-array name="theme_entry_values">
        <item>theme_1</item>
        <item>theme_2</item>
        <item>theme_3</item>
        <item>theme_4</item>
        <item>theme_5</item>
    </string-array>

    <string name="started">started</string>
    <string name="channel_id">channel_id</string>
    <string name="receiver_type_serializable">receiver_type_serializable</string>
    <string name="event_serializable">event_serializable</string>
    <string name="reminder_key">reminder_key</string>
    <string name="theme_key">theme_key</string>
    <string name="theme_1">theme_1</string>
    <string name="theme_2">theme_2</string>
    <string name="theme_3">theme_3</string>
    <string name="theme_4">theme_4</string>
    <string name="theme_5">theme_5</string>
</resources>
