<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/theme_key"
        android:title="@string/theme_title"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_entry_values"
        android:defaultValue="@string/theme_default_value"
        android:summary="@string/theme_summary"
        android:dialogTitle="@string/theme_dialog_title"/>

    <ListPreference
        android:key="@string/reminder_key"
        android:title="@string/reminder_title"
        android:entries="@array/reminder_entries"
        android:entryValues="@array/reminder_entry_values"
        android:defaultValue="@string/reminder_default_value"
        android:summary="@string/reminder_summary"
        android:dialogTitle="@string/reminder_dialog_title"/>

    <Preference
        app:key="about"
        app:title="@string/action_about">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="org.erhs.stem.project.time_management"
            android:targetClass="org.erhs.stem.project.time_management.activity.AboutActivity"/>
    </Preference>

</androidx.preference.PreferenceScreen>