<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <ImageView
                android:id="@+id/event_type"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/event_type" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="       TIME IS UP" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:text="PICK UP YOUR DAY" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="429dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:orientation="vertical"></LinearLayout>

                    <Button
                        android:id="@+id/snooze"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snooze" />

                    <Button
                        android:id="@+id/action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/action" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>